fix toc z-index

--- a/src/scss/blocks/_toc.scss
+++ b/src/scss/blocks/_toc.scss
@@ -3,6 +3,8 @@
   border-left: 3px solid get-color('light-shade');
   margin-bottom: get-size('600');
   padding: get-size('600');
+  position: relative;
+  z-index: 2;
 
   @include media-query('md') {
     float: right;
